--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon_io/favicon-32x32.png" type="image/x-icon">
-    <script src="script.js"></script>
     <title>Relicário Fashion</title>
 </head>
 
@@ -18,7 +17,7 @@
         <a onclick="menuInspiracoes()">Inspirações</a>
         <a onclick="menuInfluencers()">Influencers</a>
         <a href="forum.html">Fórum</a>
-        <a href="cadastro.html">Cadastre-se</a>
+        <a onclick="menuCadastro()">Cadastre-se</a>
         <a href="#">Login</a>
     </div>
     <button id="botaoMenu" onclick="openNav()">⚜️</button>
@@ -174,11 +173,38 @@
 
     </div>
 
+    <div style="display: none" ; id="cadastro">
+        <br><br><br><br>
+
+        <h1>Cadastro de Usuários</h1>
+        <br><br><br><br>
+
+        <form id="cadastroForm">
+            <label for="nome">Nome Completo:</label>
+            <input type="text" id="nome" name="nome" required><br>
+
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" name="email" required><br>
+
+            <label for="nascimento">Data de Nascimento:</label>
+            <input type="date" id="nascimento" name="nascimento" required><br>
+
+            <label for="senha">Senha:</label>
+            <input type="password" id="senha" name="senha" required><br>
+
+            <button type="submit">Cadastrar</button>
+        </form>
+
+        <p id="mensagem"></p>
+    </div>
+    <script src="script.js"></script>
+    <footer>
+        <p id="p_rodape">
+            &copy; 2024 Bruxa <b> P </b> - Todos os direitos reservados
+        </p>
+    </footer>
 </body>
-<footer>
-    <p id="p_rodape">
-        &copy; 2024 Bruxa <b> P </b> - Todos os direitos reservados
-    </p>
-</footer>
+
+
 
 </html>
