mundanca de visual

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <h1 class="h1titulo">Relicário Vintage</h1>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a onclick="menuMain()">Início</a>
@@ -20,12 +21,10 @@
         <a onclick="menuCadastro()">Cadastre-se</a>
         <a onclick="menuLogin()">Login</a>
     </div>
-    <button id="botaoMenu" onclick="openNav()">⚜️</button>
-    <span>Bem vindo <span id="nomeUsuarioLogado"></span></span>
-    <br><br><br><br>
+    <button id="botaoMenu" onclick="openNav()"><img src="favicon/size120.png"></button>
+    <span id="spanbv">Bem Vindo <span id="nomeUsuarioLogado"></span></span>
     <div id="main">
         <h1> A moda vintage</h1>
-        <br><br><br><br>
         <p>A moda vintage é algo verdadeiramente antigo, mas que é facilmente usado atualmente,
             já que permanece em alta na
             moda. Além disso, para uma peça ser considerada vintage, é preciso que tenha, no
