--- a/index.html
+++ b/index.html
@@ -319,14 +319,26 @@
             </section>
 
         </div>
-        <div style="display: none" ; id="brecho">
-            <section class="brecho">
+        <div style="display: none" id="brecho">
+            <section class="inspiracao">
                 <a href="imagens/rosavintage.png" class="lightbox-trigger"><img src="imagens/rosavintage.png"></a>
-                <div class="brecho">
+                <div class="brecho-info">
                     <a href="https://www.instagram.com/rosavintage.brecho/" target="_blank">@rosavintage.brecho</a>
                 </div>
             </section>
-
+            <section class="inspiracao">
+                <a href="imagens/etiquetavintage" class="lightbox-trigger"><img src="imagens/etiquetavintage"></a>
+                <div class="brecho-info">
+                    <a href="https://www.instagram.com/etiquetavintage.brecho/"
+                        target="_blank">@etiquetavintage.brecho</a>
+                </div>
+            </section>
+            <section class="inspiracao">
+                <a href="imagens/donavintage.jpg" class="lightbox-trigger"><img src="imagens/donavintage.jpg"></a>
+                <div class="brecho-info">
+                    <a href="https://www.instagram.com/donavintageshop/" target="_blank">@donavintageshop</a>
+                </div>
+            </section>
 
         </div>
         </div>
@@ -374,7 +386,8 @@
                     <br>
                     <label for="mensagemTopico">Mensagem:</label>
                     <br>
-                    <textarea id="mensagemTopico" name="mensagemTopico" rows="4" required></textarea>
+                    <textarea id="mensagemTopico" name="mensagemTopico" class="mensagemTopico" rows="4"
+                        required></textarea>
                     <br>
                     <button type="submit">Criar Tópico</button>
                 </form>
